--- a/overlay/common/packages/apps/Dialer/java/com/android/voicemail/impl/res/xml/vvm_config.xml
+++ b/overlay/common/packages/apps/Dialer/java/com/android/voicemail/impl/res/xml/vvm_config.xml
@@ -16,6 +16,7 @@
 
 <list name="carrier_config_list">
     <pbundle_as_map>
+    <!-- Test -->
         <string-array name="mccmnc">
             <item value="TEST" />
         </string-array>
@@ -24,7 +25,6 @@
         <string-array name="mccmnc">
             <item value="20826?gid1=NRJ1" />
         </string-array>
-        <string name="feature_flag_name">vvm_carrier_flag_el_telecom</string>
         <int name="vvm_port_number_int" value="5499" />
         <string name="vvm_destination_number_string">8860</string>
         <string name="vvm_type_string">vvm_type_omtp_1_3</string>
@@ -277,6 +277,13 @@
     </pbundle_as_map>
     <pbundle_as_map>
         <string-array name="mccmnc">
+            <item value="302220?gid1=4D4F" />
+            <item value="302221?gid1=4D4F" />
+        </string-array>
+        <string name="vvm_type_string">vvm_type_disabled</string>
+    </pbundle_as_map>
+    <pbundle_as_map>
+        <string-array name="mccmnc">
             <item value="20809?gid1=6332" />
             <item value="20809?gid1=6336" />
             <item value="20809?gid1=7330" />
@@ -398,7 +405,7 @@
         <boolean name="vvm_legacy_mode_enabled_bool" value="true" />
         <boolean name="vvm_ignore_transcription" value="true" />
         <boolean name="vvm_transcription_always_allowed" value="true" />
-        <boolean name="vvm_use_direct_tls_connection" value="true" />
+        <boolean name="vvm_use_direct_tls_connection_bool" value="true" />
         <boolean name="vvm_change_greeting_enabled_bool" value="true" />
         <boolean name="vvm_greeting_update_bool" value="false" />
     </pbundle_as_map>
@@ -415,7 +422,7 @@
         <boolean name="vvm_legacy_mode_enabled_bool" value="true" />
         <boolean name="vvm_ignore_transcription" value="true" />
         <boolean name="vvm_transcription_always_allowed" value="true" />
-        <boolean name="vvm_use_direct_tls_connection" value="true" />
+        <boolean name="vvm_use_direct_tls_connection_bool" value="true" />
         <boolean name="vvm_change_greeting_enabled_bool" value="true" />
         <boolean name="vvm_greeting_update_bool" value="false" />
     </pbundle_as_map>
@@ -501,5 +508,27 @@
         <string name="vvm_transcription_allowed_for_carrier_flag_name"> vvm_tmobile_us_allows_transcription </string>
         <boolean name="vvm_ignore_transcription" value="true" />
         <boolean name="vvm_change_greeting_enabled_bool" value="true" />
+    </pbundle_as_map>
+    <pbundle_as_map>
+        <string name="feature_flag_name">enable_vvm_carrier_flag_claro_pr</string>
+        <string-array name="mccmnc">
+            <item value="330110" />
+            <item value="33011" />
+        </string-array>
+        <int name="vvm_port_number_int" value="148" />
+        <string name="vvm_destination_number_string">8860</string>
+        <string name="vvm_type_string">vvm_type_omtp</string>
+    </pbundle_as_map>
+    <pbundle_as_map>
+        <string name="feature_flag_name">enable_vvm_carrier_sunrise</string>
+        <string-array name="mccmnc">
+            <item value="22802" />
+        </string-array>
+        <int name="vvm_port_number_int" value="5499" />
+        <int name="vvm_ssl_port_number_int" value="993" />
+        <string name="vvm_destination_number_string">3030</string>
+        <string name="vvm_type_string">vvm_type_omtp</string>
+        <boolean name="vvm_cellular_data_required_bool" value="false" />
+        <boolean name="vvm_ssl_enabled_bool" value="true" />
     </pbundle_as_map>
 </list>
